add progress dialog; fix press back but no response in no change case

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -282,4 +282,6 @@
     <string name="search_notebook_hint">搜索笔记本</string>
     <string name="search_blog_hint">搜索博客</string>
 
+    <string name="reverting">恢复中</string>
+
 </resources>
